--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.scss
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.scss
@@ -12,11 +12,14 @@
     margin-left: 5px;
     cursor: pointer;
   }
-  mat-expansion-panel ol {
-    padding-left: 20px;
-    li {
-      font-family: $font-name, system;
-      display: list-item;
+  mat-expansion-panel {
+    box-shadow: none !important;
+    ol {
+      padding-left: 20px;
+      li {
+        font-family: $font-name, system;
+        display: list-item;
+      }
     }
   }
 }
