--- a/src/app/applications/multicast/multicast-table/multicast-table.component.html
+++ b/src/app/applications/multicast/multicast-table/multicast-table.component.html
@@ -24,7 +24,7 @@
 
     <!-- Type Column -->
     <ng-container matColumnDef="groupType">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-1">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
         {{ "MULTICAST-TABLE.TYPE" | translate }}
       </th>
       <td mat-cell *matCellDef="let element">
