--- a/src/app/device-model/device-model-edit/device-model-edit.component.html
+++ b/src/app/device-model/device-model-edit/device-model-edit.component.html
@@ -13,6 +13,7 @@
       <label class="form-label" for="name">{{ "QUESTION.DEVICE-MODEL.GIVE-NAME" | translate }}</label
       >*
       <input
+        (change)="handleNameNull()"
         type="text"
         class="form-control"
         id="name"
