--- a/src/app/shared/components/mat-select-search/mat-select-search/mat-select-search.component.html
+++ b/src/app/shared/components/mat-select-search/mat-select-search/mat-select-search.component.html
@@ -8,7 +8,7 @@
     (keydown)="_handleKeydown($event)"
     (input)="onInputChange($event.target.value)"
     (blur)="onBlur($event.target.value)"
-    [placeholder]="placeholderLabel"
+    placeholder="placeholderLabel"
   />
   <button
     mat-button
