--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -58,7 +58,7 @@
   </div>
 
   <div class="form-group mt-3 col-12">
-    <mat-form-field>
+    <mat-form-field class="col-12">
       <label class="form-label" for="user">{{ "PERMISSION.EDIT.USERS" | translate }}</label>
       <mat-select
         [formControl]="userMultiCtrl"
@@ -103,7 +103,7 @@
   </div>
 
   <div class="form-group mt-3 col-12" *ngIf="isOrganizationApplicationPermission()">
-    <mat-form-field>
+    <mat-form-field class="col-12">
       <label class="form-label" for="name">{{ "PERMISSION.EDIT.APPS" | translate }}</label>
       <div class="col-12">
         <mat-select
