--- a/src/app/applications/datatarget/datatarget-new/datatarget-new.component.html
+++ b/src/app/applications/datatarget/datatarget-new/datatarget-new.component.html
@@ -25,7 +25,7 @@
         {{ dataTargetType.description | translate }}
       </mat-card-content>
 
-      <mat-divider inset></mat-divider>
+      <mat-divider></mat-divider>
       <mat-card-actions align="end">
         <button *ngIf="dataTargetType.readMoreUrl" (click)="showReadMe(dataTargetType)" mat-button>
           {{ "DATATARGET.READMORE" | translate }}
