--- a/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
+++ b/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
@@ -17,7 +17,7 @@
 
     <!-- Type Column -->
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-1">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
         {{ "DATATARGET-TABLE.TYPE" | translate }}
       </th>
       <td mat-cell *matCellDef="let element">
