--- a/src/app/applications/multicast/multicast-edit/multicast-edit.component.html
+++ b/src/app/applications/multicast/multicast-edit/multicast-edit.component.html
@@ -194,7 +194,7 @@
     <label class="form-label" for="groupType">{{ "QUESTION.GIVE-MULTICAST-IOTDEVICES" | translate }}</label>
 
     <div class="row">
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="outline">
         <mat-label>{{ "QUESTION.MULTICAST.SELECT-DEVICES" | translate }}</mat-label>
         <mat-select
           multiple
@@ -205,15 +205,14 @@
         >
           <app-mat-select-search [formControl]="deviceFilterCtrl"></app-mat-select-search>
 
-          <mat-option disabled="disabled" class="filter-option">
-            <button mat-raised-button class="mat-primary fill text-sm" (click)="selectAll()">
-              {{ "QUESTION.MULTICAST.SELECTALLDEVICES" | translate }}
-            </button>
-            <button mat-raised-button class="mat-primary fill text-sm" (click)="unSelectAll()">
-              {{ "QUESTION.MULTICAST.DESELECTALLDEVICES" | translate }}
-            </button>
-            <label class="onlyLorawan">{{ "QUESTION.MULTICAST.ONLY-LORAWAN" | translate }}</label>
-          </mat-option>
+          <button mat-raised-button class="mat-primary fill text-sm choose-all" (click)="selectAll()">
+            {{ "QUESTION.MULTICAST.SELECTALLDEVICES" | translate }}
+          </button>
+          <button mat-raised-button class="mat-primary fill text-sm deselect-all" (click)="unSelectAll()">
+            {{ "QUESTION.MULTICAST.DESELECTALLDEVICES" | translate }}
+          </button>
+          <label class="onlyLorawan">{{ "QUESTION.MULTICAST.ONLY-LORAWAN" | translate }}</label>
+
           <mat-option *ngFor="let device of filteredDevicesMulti | async | filterDevices" [value]="device">{{
             device.name
           }}</mat-option>
