--- a/src/app/shared/components/top-bar-table/top-bar-table.component.html
+++ b/src/app/shared/components/top-bar-table/top-bar-table.component.html
@@ -34,7 +34,7 @@
           {{ ctaLabelPrimary }}
         </button>
 
-        <mat-form-field appearance="fill" *ngIf="addDropdown">
+        <mat-form-field appearance="outline" *ngIf="addDropdown">
           <mat-label>{{ dropdownLabel }}</mat-label>
           <mat-select [placeholder]="dropdownLabel" [(value)]="selectedOpt">
             <mat-option (click)="setOptionToNull()">--{{ dropdownDefaultOption }}--</mat-option>
