--- a/src/assets/scss/components/_topbar.scss
+++ b/src/assets/scss/components/_topbar.scss
@@ -81,3 +81,7 @@
 .mat-mdc-form-field-has-icon-suffix .mat-mdc-text-field-wrapper {
   background-color: transparent !important;
 }
+
+.mat-mdc-form-field-focus-overlay {
+  background-color: transparent !important;
+}
