--- a/src/app/applications/datatarget/fiware/fiware-edit/fiware-edit.component.html
+++ b/src/app/applications/datatarget/fiware/fiware-edit/fiware-edit.component.html
@@ -208,17 +208,15 @@
             <tr *ngFor="let element of payloadDeviceDatatarget; let i = index" [attr.data-index]="i">
               <td>
                 <div class="row">
-                  <mat-form-field appearance="outline">
+                  <mat-form-field appearance="fill">
                     <mat-label>{{ "QUESTION.DATATARGET.SELECT-DEVICES" | translate }}</mat-label>
                     <mat-select multiple name="devices" [compareWith]="compare" [(value)]="element.iotDeviceIds">
-                      <mat-option disabled="disabled" class="filter-option">
                         <button mat-raised-button class="mat-primary fill text-sm" (click)="selectAllDevices(i)">
                           {{ "QUESTION.DATATARGET.SELECTALLDEVICES" | translate }}
                         </button>
                         <button mat-raised-button class="mat-primary fill text-sm" (click)="deSelectAllDevices(i)">
                           {{ "QUESTION.DATATARGET.DESELECTALLDEVICES" | translate }}
                         </button>
-                      </mat-option>
                       <mat-option *ngFor="let device of devices" [value]="device.id">{{ device.name }}</mat-option>
                     </mat-select>
                   </mat-form-field>
@@ -226,7 +224,7 @@
               </td>
               <td>
                 <div class="row">
-                  <mat-form-field appearance="outline">
+                  <mat-form-field appearance="fill">
                     <mat-label>{{ "QUESTION.DATATARGET.SELECT-PAYLOADDECODER" | translate }}</mat-label>
                     <mat-select matNativeControl name="payloadDecoderId" [(value)]="element.payloadDecoderId">
                       <mat-option [value]="0">
