--- a/src/app/applications/datatarget/httppush/httppush-edit/httppush-edit.component.scss
+++ b/src/app/applications/datatarget/httppush/httppush-edit/httppush-edit.component.scss
@@ -1,3 +1,3 @@
-.mat-mdc-text-field-wrapper .mdc-text-field{
+::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
   background-color: white !important;
 }
