last angular styling changes.

--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -25,7 +25,7 @@
       </li>
     </ul>
   </div>
-  <mat-tab-group animationDuration="0ms">
+  <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start" animationDuration="0ms">
     <mat-tab label="Generelt">
       <div class="input-container col-xs-12 form-group">
         <label for="name" class="form-label asterisk-if-mandatory">{{
