--- a/src/assets/scss/setup/_material-theme.scss
+++ b/src/assets/scss/setup/_material-theme.scss
@@ -181,3 +181,11 @@ tr.mat-row {
 .mdc-menu-surface.mat-mdc-select-panel {
   max-height: 400px !important;
 }
+
+.mat-mdc-tab-links {
+  width: 20% !important
+}
+
+.mdc-checkbox__checkmark{
+  color: white !important
+}
