--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -58,23 +58,22 @@
   </div>
 
   <div class="form-group mt-3 col-12">
-    <mat-form-field class="col-12">
-      <label class="form-label" for="user">{{ "PERMISSION.EDIT.USERS" | translate }}</label>
-      <mat-select
-        [formControl]="userMultiCtrl"
-        [multiple]="true"
-        panelClass="overflow-x-hidden"
-        [(value)]="permission.userIds"
-        name="users"
-        #multiSelect
-        [compareWith]="compare"
-      >
-        <app-mat-select-search [formControl]="userMultiFilterCtrl"></app-mat-select-search>
-        <mat-option *ngFor="let user of filteredUsersMulti | async" [value]="user.id">
-          {{ getTextForUser(user) }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+    <label class="form-label" for="user">{{ "PERMISSION.EDIT.USERS" | translate }}</label>
+    <mat-select
+      id="userGroup"
+      class="form-control"
+      [formControl]="userMultiCtrl"
+      [multiple]="true"
+      panelClass="overflow-x-hidden"
+      [(value)]="permission.userIds"
+      [compareWith]="compare"
+      #multiSelect
+    >
+      <app-mat-select-search [formControl]="userMultiFilterCtrl"></app-mat-select-search>
+      <mat-option *ngFor="let user of filteredUsersMulti | async" [value]="user.id">
+        {{ getTextForUser(user) }}
+      </mat-option>
+    </mat-select>
   </div>
 
   <div *ngIf="isNotGlobalAdmin">
@@ -103,13 +102,13 @@
   </div>
 
   <div class="form-group mt-3 col-12" *ngIf="isOrganizationApplicationPermission()">
-    <mat-form-field class="col-12">
       <label class="form-label" for="name">{{ "PERMISSION.EDIT.APPS" | translate }}</label>
       <div class="col-12">
         <mat-select
           id="applicationIds"
           [formControl]="applicationMultiCtrl"
           [multiple]="true"
+          class="form-control"
           panelClass="overflow-x-hidden"
           [(value)]="permission.applicationIds"
           name="applicationIds"
@@ -122,7 +121,6 @@
           </mat-option>
         </mat-select>
       </div>
-    </mat-form-field>
   </div>
 
   <div *ngIf="isReadOrWrite()">
