--- a/src/app/shared/components/top-bar/top-bar.component.scss
+++ b/src/app/shared/components/top-bar/top-bar.component.scss
@@ -45,3 +45,7 @@ button:focus {
   height: 0;
   width: 0;
 }
+
+::ng-deep .mat-mdc-form-field:not(.mat-form-field-disabled) .mat-mdc-floating-label.mdc-floating-label {
+  width: 100% !important;
+}
