Added mat-divider to tab-nav-bars.

--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -21,6 +21,7 @@
       >{{ link.label | translate }}</a
     >
   </nav>
+  <mat-divider></mat-divider>
   <mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
   <router-outlet></router-outlet>
 </div>
