--- a/src/app/gateway/gateway-overview/gateway-overview.component.html
+++ b/src/app/gateway/gateway-overview/gateway-overview.component.html
@@ -28,6 +28,7 @@
         >{{ link.label | translate }}</a
       >
     </nav>
+    <mat-divider></mat-divider>
     <mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
     <router-outlet></router-outlet>
   </div>
