Added change organization dialog component. This can be opened from details page, and the table. Dialog is still in progress.

--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -162,6 +162,11 @@
                 }}</a>
               </li>
               <li class="dropdown-item">
+                <a (click)="onOpenChangeOrganizationDialog(element.id)" routerLinkActive="active">{{
+                  "APPLICATION.CHANGE_ORGANIZATION" | translate
+                }}</a>
+              </li>
+              <li class="dropdown-item">
                 <a (click)="deleteApplication(element.id)" [routerLink]="[]">{{
                   "APPLICATION-TABLE-ROW.DELETE" | translate
                 }}</a>
