--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -7,6 +7,7 @@
     [dropDownButton]="dropdownButton"
     (deleteSelectedInDropdown)="onDeleteApplication()"
     [canEdit]="canEdit"
+    (extraDropdownOptions)="onExtraDropdownOptionClicked($event)"
   >
   </app-top-bar>
   <div class="container-fluid">
