--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -163,7 +163,7 @@
               </li>
               <li class="dropdown-item">
                 <a (click)="onOpenChangeOrganizationDialog(element.id)" routerLinkActive="active">{{
-                  "APPLICATION.CHANGE_ORGANIZATION" | translate
+                  "APPLICATION.CHANGE-ORGANIZATION.TITLE" | translate
                 }}</a>
               </li>
               <li class="dropdown-item">
