--- a/src/app/applications/application-detail/change-organization-dialog/change-organization-dialog.component.html
+++ b/src/app/applications/application-detail/change-organization-dialog/change-organization-dialog.component.html
@@ -11,7 +11,7 @@
     [compareWith]="compare"
     (selectionChange)="onOrganizationChange()"
   >
-    <mat-option *ngFor="let organization of filteredOrganizationsMulti | async" [value]="organization.id">
+    <mat-option *ngFor="let organization of filteredOrganizations | async" [value]="organization.id">
       {{ organization.name }}
     </mat-option>
   </mat-select>
@@ -27,7 +27,6 @@
     [(value)]="application.permissionIds"
     [compareWith]="compare"
   >
-    <app-mat-select-search [formControl]="permissionMultiFilterCtrl"></app-mat-select-search>
     <mat-option *ngFor="let permission of filteredPermissionsMulti | async" [value]="permission.id">
       {{ permission.name }}
     </mat-option>
@@ -35,7 +34,7 @@
   <mat-hint>{{ "APPLICATION.CHANGE-ORGANIZATION.USER-GROUP-AUTO-SELECT" | translate }}</mat-hint>
 </div>
 <div mat-dialog-actions class="d-flex flex-row">
-  <button mat-dialog-close [mat-dialog-close]="true" class="btn btn-primary">
+  <button (click)="onSubmit()" class="btn btn-primary">
     {{ "GEN.SAVE" | translate }}
   </button>
   <button mat-dialog-close [mat-dialog-close]="false" class="btn btn-secondary ml-2">
