Added dialog for changing gateway organization.

--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -207,6 +207,11 @@
               }}</a>
             </li>
             <li class="dropdown-item">
+              <a (click)="onOpenChangeOrganizationDialog(gateway.id)" routerLinkActive="active">{{
+                "GATEWAY.CHANGE-ORGANIZATION.TITLE" | translate
+              }}</a>
+            </li>
+            <li class="dropdown-item">
               <a (click)="clickDelete(gateway)" [routerLink]="[]">{{ "GEN.DELETE" | translate }}</a>
             </li>
           </ul>
