--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -7,6 +7,7 @@
     [dropDownButton]="dropdownButton"
     (deleteSelectedInDropdown)="onDeleteGateway()"
     [canEdit]="canEdit"
+    (extraDropdownOptions)="onExtraDropdownOptionClicked($event)"
   ></app-top-bar>
   <div class="container-fluid">
     <div class="row">
