--- a/src/app/shared/components/top-bar-table/top-bar-table.component.html
+++ b/src/app/shared/components/top-bar-table/top-bar-table.component.html
@@ -1,5 +1,5 @@
 <div class="row sub-bar-wrapper no-margin">
-  <div class="col-12 d-flex sub-bar align-items-center">
+  <div class="col-12 d-flex sub-bar align-items-center buttonMarginBottom">
     <h3 *ngIf="title" class="mb-0">{{ title }}</h3>
     <div class="ml-auto d-flex">
       <div>
