--- a/src/app/applications/iot-devices/iot-device-detail/downlink/downlinks/downlink.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/downlink/downlinks/downlink.component.html
@@ -44,7 +44,7 @@
       <p>{{ "IOTDEVICE.DOWNLINK.SIGFOX-PAYLOAD-LENGTH" | translate }}</p>
     </div>
     <div class="mt-5">
-      <button (click)="clickDownlink()" class="btn btn-secondary" type="button">
+      <button (click)="handleQueueDownlink()" class="btn btn-secondary" type="button">
         {{ "IOTDEVICE.DOWNLINK.START" | translate }}
       </button>
     </div>
