--- a/src/app/applications/iot-devices/iot-device-detail/downlink/downlink-tables/downlink-tables.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/downlink/downlink-tables/downlink-tables.component.html
@@ -43,12 +43,12 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
-  <div *ngIf="checkForLoRaWAN(device)" class="mt-5 buttons">
-    <button (click)="clickFlushQueue()" class="btn btn-secondary" type="button">
+  <div class="mt-5 buttons">
+    <button (click)="handleFlushQueue()" class="btn btn-secondary" type="button">
       {{ "IOTDEVICE.DOWNLINK.FLUSH-QUEUE" | translate }}
     </button>
 
-    <button (click)="clickReload()" class="btn btn-secondary" type="button">
+    <button (click)="handleReload()" class="btn btn-secondary" type="button">
       {{ "IOTDEVICE.DOWNLINK.RELOAD" | translate }}
     </button>
   </div>
@@ -81,7 +81,7 @@
         </td>
       </ng-container>
 
-      <!-- AcknowlegdedAt Column -->
+      <!-- AcknowledgedAt Column -->
       <ng-container matColumnDef="acknowledgedAt">
         <th mat-header-cell *matHeaderCellDef>{{ "IOTDEVICE.DOWNLINK.RECEIVEDAT" | translate }}</th>
         <td mat-cell *matCellDef="let element">
@@ -109,8 +109,8 @@
         </td>
       </ng-container>
 
-      <!-- Acknowlegded Column -->
-      <ng-container matColumnDef="acknowlegded">
+      <!-- Acknowledged Column -->
+      <ng-container matColumnDef="acknowledged">
         <th mat-header-cell *matHeaderCellDef>{{ "IOTDEVICE.DOWNLINK.CONFIRMED" | translate }}</th>
         <td mat-cell *matCellDef="let element">
           {{ isAcknowledged(element) }}
@@ -137,8 +137,8 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumnsHistory"></tr>
     </table>
   </div>
-  <div *ngIf="checkForLoRaWAN(device)" class="mt-5 buttons">
-    <button (click)="clickReload()" class="btn btn-secondary" type="button">
+  <div class="mt-5 buttons">
+    <button (click)="handleReload()" class="btn btn-secondary" type="button">
       {{ "IOTDEVICE.DOWNLINK.RELOAD" | translate }}
     </button>
   </div>
