Added latest message and status-icons to datatarget UI..

--- a/src/app/applications/datatarget/datatarget-log/datatarget-log.component.scss
+++ b/src/app/applications/datatarget/datatarget-log/datatarget-log.component.scss
@@ -1,5 +1,11 @@
 :host {
-    .datatarget-log-container {
-        margin: 2em;
-    }
+  .datatarget-log-container {
+    margin: 2em;
+  }
+  .fa-ok {
+    color: green !important;
+  }
+  .fa-error {
+    color: red !important;
+  }
 }
