--- a/src/app/applications/datatarget/datatarget-log/datatarget-log.component.html
+++ b/src/app/applications/datatarget/datatarget-log/datatarget-log.component.html
@@ -13,7 +13,11 @@
         <!-- Type column -->
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "DATATARGET-TABLE.TYPE" | translate }}</th>
-            <td mat-cell *matCellDef="let element">{{ ('DATATARGET.RESPONSE_TYPE.' + element.type) | translate }}</td>
+            <td mat-cell *matCellDef="let element">
+                <fa-icon *ngIf="element.type === 'OK'" [icon]="faCheckCircle" class="fa-ok"></fa-icon>
+                <fa-icon *ngIf="element.type === 'ERROR'" [icon]="faExclamationTriangle" class="fa-error"></fa-icon>
+                {{ ('DATATARGET.RESPONSE_TYPE.' + element.type) | translate }}
+            </td>
         </ng-container>
 
         <!-- Message column -->
