--- a/src/app/applications/datatarget/httppush/httppush-detail/httppush-detail.component.html
+++ b/src/app/applications/datatarget/httppush/httppush-detail/httppush-detail.component.html
@@ -4,6 +4,9 @@
       <div class="jumbotron jumbotron--m-right jumbotron--full-width width100percent">
         <h3>{{ "DATATARGET.DETAILS" | translate }}</h3>
         <app-general-details [data]="datatarget"></app-general-details>
+        <p *ngIf="datatarget.type !== dataTargetType.OPENDATADK">
+          <strong>{{ "DATATARGET.LATEST_MESSAGE" | translate }}</strong>{{ datatarget.lastMessageDate | dkTime }}
+        </p>
         <mat-divider></mat-divider>
         <span *ngIf="datatarget.type !== dataTargetType.OPENDATADK">
           <p>
