Added change button for application on devices. Dialog is created, and application, device modell ,organization selectors are up and running. Data targets and payload decoders is a work in progress.

--- a/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
+++ b/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
@@ -142,6 +142,11 @@
                 >{{ "IOTDEVICE-TABLE-ROW.EDIT" | translate }}
               </a>
             </li>
+            <li class="dropdown-item" *ngIf="iotDevice.type!==deviceTypes.SIGFOX">
+              <a (click)="onOpenChangeApplicationDialog(iotDevice.id)" routerLinkActive="active">{{
+                "IOTDEVICE.CHANGE-APPLICATION.TITLE" | translate
+              }}</a>
+            </li>
             <li class="dropdown-item">
               <a (click)="clickDelete(iotDevice)" [routerLink]="[]">{{ "IOTDEVICE-TABLE-ROW.DELETE" | translate }}</a>
             </li>
