Added error messages if trying to delete organizations with gateways.

--- a/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-tabel.component.html
+++ b/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-tabel.component.html
@@ -1,3 +1,10 @@
+<div *ngIf="errorMessages" class="error-messages p-3">
+  <ul class="mb-0">
+    <li *ngFor="let error of errorMessages">
+      {{ error | translate }}
+    </li>
+  </ul>
+</div>
 <div class="mat-elevation-z8">
   <div class="loading-shade" *ngIf="isLoadingResults">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
