--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -10,6 +10,13 @@
   >
   </app-top-bar>
   <div class="container-fluid">
+    <div *ngIf="errorMessages" class="error-messages p-3">
+      <ul class="mb-0">
+        <li *ngFor="let error of errorMessages">
+          {{ error | translate }}
+        </li>
+      </ul>
+    </div>
     <div class="row">
       <div class="col-12">
         <div class="jumbotron">
