added some margin to for error box.

--- a/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-tabel.component.html
+++ b/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-tabel.component.html
@@ -5,7 +5,7 @@
     </li>
   </ul>
 </div>
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8 mt-3">
   <div class="loading-shade" *ngIf="isLoadingResults">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
