Added sorting of organizations, padding for dialog, and call to get permissions where applicationadmin

--- a/src/app/applications/application-change-organization-dialog/application-change-organization-dialog.component.html
+++ b/src/app/applications/application-change-organization-dialog/application-change-organization-dialog.component.html
@@ -35,7 +35,7 @@
       <mat-hint>{{ "APPLICATION.CHANGE-ORGANIZATION.USER-GROUP-AUTO-SELECT" | translate }}</mat-hint>
     </div>
   </div>
-  <div mat-dialog-actions class="d-flex flex-row">
+  <div mat-dialog-actions class="d-flex flex-row mat-dialog-actions">
     <button (click)="onSubmit()" class="btn btn-primary">
       {{ "GEN.SAVE" | translate }}
     </button>
