Added padding for dialog. Also made snackbar wait for dismiss to reload.

--- a/src/app/gateway/gateway-change-organization-dialog/gateway-change-organization-dialog.component.html
+++ b/src/app/gateway/gateway-change-organization-dialog/gateway-change-organization-dialog.component.html
@@ -16,7 +16,7 @@
       </mat-option>
     </mat-select>
   </div>
-  <div mat-dialog-actions class="d-flex flex-row">
+  <div mat-dialog-actions class="d-flex flex-row mat-dialog-actions">
     <button (click)="onSubmit()" class="btn btn-primary">
       {{ "GEN.SAVE" | translate }}
     </button>
