added padding to dialog, and reload when dialog dismissed.

--- a/src/app/applications/iot-devices/iot-device-change-application-dialog/iot-device-change-application-dialog.component.html
+++ b/src/app/applications/iot-devices/iot-device-change-application-dialog/iot-device-change-application-dialog.component.html
@@ -99,7 +99,7 @@
     </ng-container>
   </div>
 
-  <div mat-dialog-actions class="d-flex flex-row">
+  <div mat-dialog-actions class="d-flex flex-row mat-dialog-actions">
     <button (click)="onSubmit()" class="btn btn-primary">
       {{ "GEN.SAVE" | translate }}
     </button>
