--- a/src/app/applications/iot-devices/iot-device-change-application-dialog/iot-device-change-application-dialog.component.scss
+++ b/src/app/applications/iot-devices/iot-device-change-application-dialog/iot-device-change-application-dialog.component.scss
@@ -1,3 +1,8 @@
 .iot-device-change-application-dialog {
   width: 50vw;
 }
+
+.mat-dialog-actions {
+  margin-left: 13px;
+  margin-bottom: 13px;
+}
